--- a/MvcMovie/Views/HelloWorld/Index.cshtml
+++ b/MvcMovie/Views/HelloWorld/Index.cshtml
@@ -36,6 +36,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Movies![0].Price)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Movies![0].Rating)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -56,6 +59,9 @@
                     @Html.DisplayFor(modelItem => item.Price)
                 </td>
                 <td>
+                    @Html.DisplayFor(modelItem => item.Rating)
+                </td>
+                <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
@@ -63,4 +69,4 @@
             </tr>
         }
     </tbody>
-</table>
+</table>om our View Template!</p>
